--- a/MABE/settings_world.cfg
+++ b/MABE/settings_world.cfg
@@ -6,6 +6,7 @@
   evaluationsPerGeneration = 1               #(int) Number of times to test each Genome per generation (useful with non-deterministic brains)
   mode = 0                                   #(int) 0 = bit outputs before adding, 1 = add outputs
   numberOfOutputs = 10                       #(int) number of outputs in this world
+  numberOfMatches = 100                       #(int) number of outputs in this world
 
 % WORLD_BACKGAMMON_NAMES
   brainNameSpace = root::                    #(string) namespace for parameters used to define brain
