Took a stab at implementing EcoEA as a MABE optimizer.

--- a/MABE/settings_organism.cfg
+++ b/MABE/settings_organism.cfg
@@ -5,11 +5,11 @@
   biasRange = -1.0,1.0                       #(string) When each nodes value is calculated a bias in this range (derived from the genome) will be added to the node
                                              #  value before thresholding.  (min,max)
   genomeName = root::                        #(string) namespace for parameters used to define this brain
-  hiddenLayerSizes = 10,10,10,10,10          #(string) comma seperated list of sizes for each hidden layer if there are hidden layers
+  hiddenLayerSizes =                         #(string) comma seperated list of sizes for each hidden layer if there are hidden layers
                                              #  if a single number, all hidden layers will have this size
                                              #  if blank, hidden layers will all have (number of outputs + number of recurrent) nodes.
-  nrOfHiddenLayers = 5                       #(int) number of hidden layers. if 0, hidden layer have (number of outputs + number of recurrent) nodes.
-  nrOfRecurringNodes = 0                     #(int) number of recurring nodes
+  nrOfHiddenLayers = 0                       #(int) number of hidden layers. if 0, hidden layer have (number of outputs + number of recurrent) nodes.
+  nrOfRecurringNodes = 10                    #(int) number of recurring nodes
   thresholdMethod = Tanh                     #(string) Threshold method applied to node values after summation. Must be one of: NONE, Sigmoid, Tanh, ReLU, Binary
   weightRange = -1.0,1.0                     #(string) range for weight values (min,max)
 
