--- a/etc/config.cfg
+++ b/etc/config.cfg
@@ -19,7 +19,7 @@ set AGENT_1_WEIGHT_TALL_DEFENSE 0   # (If weighted agent) Weight for Tall Defens
 ### AGENT_2 ###
 # Agent 2 Settings
 
-set AGENT_2_TYPE RANDOM             # Determines which class of agent to use for agent 2  (Options: RANDOM, TERMINAL, WEIGHTED, PUBEVAL)
+set AGENT_2_TYPE PUBEVAL            # Determines which class of agent to use for agent 2  (Options: RANDOM, TERMINAL, WEIGHTED, PUBEVAL)
 set AGENT_2_SEED -1                 # Random seed to use for agent 2 (-1 for general random seed)
 set AGENT_2_WEIGHT_MOST_FORWARD 0   # (If weighted agent) Weight for Most Forward
 set AGENT_2_WEIGHT_AVG_FORWARD 0    # (If weighted agent) Weight for Average Forward
