--- a/MABE/settings.cfg
+++ b/MABE/settings.cfg
@@ -1,10 +1,10 @@
 % GLOBAL
-  initPop = default 100                      #(string) initial population to start MABE (if it's .plf syntax it will be parsed as if preceded by "MASTER = ". If
+  initPop = default 10                      #(string) initial population to start MABE (if it's .plf syntax it will be parsed as if preceded by "MASTER = ". If
                                              #  it's a file name with .plf that population loader file is parsed
   mode = run                                 #(string) mode to run MABE in [run,visualize,analyze]
   outputPrefix = ./                          #(string) Directory and prefix specifying where data files will be written
   randomSeed = 101                           #(int) seed for random number generator, if -1 random number generator will be seeded randomly
-  updates = 1000                              #(int) how long the program will run
+  updates = 100                              #(int) how long the program will run
 
 % ARCHIVIST
   outputMethod = Default                     #(string) output method, [Default]
@@ -25,27 +25,14 @@
   writeSnapshotOrganismsFiles = 0            #(bool) if true, snapshot organisms files will be written (with all organisms for entire population)
 
 % OPTIMIZER
-  optimizer = Simple                         #(string) optimizer to be used, [Simple]
+  optimizer = EcoEA                          #(string) optimizer to be used, [EcoEA]
 
-% OPTIMIZER_SIMPLE
-  cullBelow = -1.0                           #(double) cull organisms with score less then (((maxScore - minScore) * cullBelow) + minScore)
-                                             #  if -1, no culling.
-  cullByRange = 0                            #(bool) if true cull will be relative to min and max score
-                                             #    i.e. cull organisms with score less then (((maxScore - minScore) * cullBelow) + minScore)
-                                             #  if false, cull will be relative to organism ranks
-                                             #    i.e. find score of cullBelow*populaiton size best, and discard all orgs with lower score.
-  cullRemap = -1.0                           #(double) if cullBelow is being used (not -1) then remap scores between cullRemap and 1.0 so that the minimum score
-                                             #  in the culled population is remapped to cullRemap and the high score is remapped to 1.0
-                                             #  The effect will be that the lowest score after culling will have a cullRemap % chance to kept if selected using the
-                                             #  Roulette selection method
-  elitismCount = 1                           #(string) number of mutated offspring added to next population for each elite organism (MTree)
-  elitismRange = 0                           #(string) number of elite organisms (i.e. if 5, then best 5) (MTree)
+% OPTIMIZER_ECOEA
+  epsilon = 0.1                              #(double) cutoff when conducting per formula selection.
+                                             #  e.g. 0.1 = organisms in the top 90% are kept. use 0.0 for classic EcoEA.
   nextPopSize = -1                           #(string) size of population after optimization(MTree). -1 indicates use current population size
   numberParents = 1                          #(int) number of parents used to produce offspring
-  optimizeValue = DM_AVE[score]              #(string) value to optimize (MTree)
-  selectionMethod = Roulette()               #(string) how are parents selected? options: Roulette(),Tournament(size=VAL)
-  selfRate = 0                               #(string) value between 0 and 1, probability that an organism will self (ignored if numberParents = 1) (MTree)
-  surviveRate = 0                            #(string) value between 0 and 1, probability that an organism will survive (MTree)
+  tournamentSize = 7                         #(int) Size of each tournament in EcoEA selection
 
 % PARAMETER_FILES
   commentIndent = 45                         #(int) minimum space before comments
