More tweaks to BackgammonWorld and EcoEAOptimizer. Fingers crossed it works!

--- a/MABE/settings.cfg
+++ b/MABE/settings.cfg
@@ -28,10 +28,16 @@
   optimizer = EcoEA                          #(string) optimizer to be used, [EcoEA]
 
 % OPTIMIZER_ECOEA
-  epsilon = 0.1                              #(double) cutoff when conducting per formula selection.
+  consumptionFraction = 1.0                  #(double) Percentage of resources an organism actually gets (1.0 for normal)
+  epsilon = 0.0                              #(double) cutoff when conducting per formula selection.
                                              #  e.g. 0.1 = organisms in the top 90% are kept. use 0.0 for classic EcoEA.
+  inflow = 0.1                               #(double) Resource inflow per update
+  leadingUpdates = 100                       #(int) Number of updates of inflow to start with.
+  maxCap = 1.0                               #(double) Maximum resource an organism can take from one resource pool per update
   nextPopSize = -1                           #(string) size of population after optimization(MTree). -1 indicates use current population size
   numberParents = 1                          #(int) number of parents used to produce offspring
+  optimizeValueNames = mostForward,avgForward,leastForward,aggressive,wideDefense,tallDefense #(string) Names of data map elements to be used for EcoEA selection
+  outflow = 0.01                             #(double) Resource outflow rate per update (as a percentage)
   tournamentSize = 7                         #(int) Size of each tournament in EcoEA selection
 
 % PARAMETER_FILES
