--- a/MABE/makefile
+++ b/MABE/makefile
@@ -1,12 +1,11 @@
 EMP_SRC := /home/austin/research/tools/empirical_clean/Empirical/source
- 
+
 all: mabe
 
-#mabe: objectFiles/main.o objectFiles/Analyze_neurocorrelates.o objectFiles/Archivist_DefaultArchivist.o objectFiles/Brain_AbstractBrain.o objectFiles/Genome_AbstractGenome.o objectFiles/Global.o objectFiles/Group_Group.o objectFiles/Optimizer_AbstractOptimizer.o objectFiles/Organism_Organism.o objectFiles/Utilities_Data.o objectFiles/Utilities_MTree.o objectFiles/Utilities_Parameters.o objectFiles/Utilities_Loader.o objectFiles/Utilities_Filesystem.o objectFiles/Utilities_CSV.o objectFiles/World_AbstractWorld.o objectFiles/World_BackgammonWorld_BackgammonWorld.o objectFiles/Optimizer_EcoEAOptimizer_EcoEAOptimizer.o objectFiles/Brain_ANNBrain_ANNBrain.o objectFiles/Genome_CircularGenome_CircularGenome.o
-mabe: objectFiles/main.o objectFiles/Analyze_neurocorrelates.o objectFiles/Archivist_DefaultArchivist.o objectFiles/Brain_AbstractBrain.o objectFiles/Genome_AbstractGenome.o objectFiles/Global.o objectFiles/Group_Group.o objectFiles/Optimizer_AbstractOptimizer.o objectFiles/Organism_Organism.o objectFiles/Utilities_Data.o objectFiles/Utilities_MTree.o objectFiles/Utilities_Parameters.o objectFiles/Utilities_Loader.o objectFiles/Utilities_Filesystem.o objectFiles/Utilities_CSV.o objectFiles/World_AbstractWorld.o objectFiles/Optimizer_EcoEAOptimizer_EcoEAOptimizer.o objectFiles/Brain_ANNBrain_ANNBrain.o objectFiles/Genome_CircularGenome_CircularGenome.o
-	c++ -Wno-c++98-compat -w -Wall -std=c++14 -O3 -lpthread -pthread objectFiles/main.o objectFiles/Analyze_neurocorrelates.o objectFiles/Archivist_DefaultArchivist.o objectFiles/Brain_AbstractBrain.o objectFiles/Genome_AbstractGenome.o objectFiles/Global.o objectFiles/Group_Group.o objectFiles/Optimizer_AbstractOptimizer.o objectFiles/Organism_Organism.o objectFiles/Utilities_Data.o objectFiles/Utilities_MTree.o objectFiles/Utilities_Parameters.o objectFiles/Utilities_Loader.o objectFiles/Utilities_Filesystem.o objectFiles/Utilities_CSV.o objectFiles/World_AbstractWorld.o  objectFiles/Optimizer_EcoEAOptimizer_EcoEAOptimizer.o objectFiles/Brain_ANNBrain_ANNBrain.o objectFiles/Genome_CircularGenome_CircularGenome.o -o mabe
+mabe: objectFiles/main.o objectFiles/Analyze_neurocorrelates.o objectFiles/Archivist_DefaultArchivist.o objectFiles/Brain_AbstractBrain.o objectFiles/Genome_AbstractGenome.o objectFiles/Global.o objectFiles/Group_Group.o objectFiles/Optimizer_AbstractOptimizer.o objectFiles/Organism_Organism.o objectFiles/Utilities_Data.o objectFiles/Utilities_MTree.o objectFiles/Utilities_Parameters.o objectFiles/Utilities_Loader.o objectFiles/Utilities_Filesystem.o objectFiles/Utilities_CSV.o objectFiles/World_AbstractWorld.o objectFiles/Genome_CircularGenome_CircularGenome.o objectFiles/Optimizer_EcoEAOptimizer_EcoEAOptimizer.o objectFiles/Optimizer_LexicaseOptimizer_LexicaseOptimizer.o objectFiles/Brain_ANNBrain_ANNBrain.o 
+	c++ -Wno-c++98-compat -w -Wall -std=c++14 -O3 -lpthread -pthread objectFiles/main.o objectFiles/Analyze_neurocorrelates.o objectFiles/Archivist_DefaultArchivist.o objectFiles/Brain_AbstractBrain.o objectFiles/Genome_AbstractGenome.o objectFiles/Global.o objectFiles/Group_Group.o objectFiles/Optimizer_AbstractOptimizer.o objectFiles/Organism_Organism.o objectFiles/Utilities_Data.o objectFiles/Utilities_MTree.o objectFiles/Utilities_Parameters.o objectFiles/Utilities_Loader.o objectFiles/Utilities_Filesystem.o objectFiles/Utilities_CSV.o objectFiles/World_AbstractWorld.o objectFiles/Genome_CircularGenome_CircularGenome.o objectFiles/Optimizer_EcoEAOptimizer_EcoEAOptimizer.o objectFiles/Optimizer_LexicaseOptimizer_LexicaseOptimizer.o objectFiles/Brain_ANNBrain_ANNBrain.o  -o mabe
 
-objectFiles/main.o: ./main.cpp ./World/BackgammonWorld/BackgammonWorld.h
+objectFiles/main.o: ./main.cpp
 	c++ -Wno-c++98-compat -w -Wall -std=c++14 -O3 -lpthread -pthread -c ./main.cpp -o objectFiles/main.o -I ${EMP_SRC}
 
 objectFiles/Analyze_neurocorrelates.o: ./Analyze/neurocorrelates.cpp ./Analyze/neurocorrelates.h
@@ -54,17 +53,17 @@ objectFiles/Utilities_CSV.o: ./Utilities/CSV.cpp ./Utilities/CSV.h
 objectFiles/World_AbstractWorld.o: ./World/AbstractWorld.cpp ./World/AbstractWorld.h
 	c++ -Wno-c++98-compat -w -Wall -std=c++14 -O3 -lpthread -pthread -c ./World/AbstractWorld.cpp -o objectFiles/World_AbstractWorld.o
 
-#objectFiles/World_BackgammonWorld_BackgammonWorld.o: ./World/BackgammonWorld/BackgammonWorld.cpp ./World/BackgammonWorld/BackgammonWorld.h
-#	c++ -Wno-c++98-compat -w -Wall -std=c++14 -O3 -lpthread -pthread -c ./World/BackgammonWorld/BackgammonWorld.cpp -o objectFiles/World_BackgammonWorld_BackgammonWorld.o -I ${EMP_SRC}
+objectFiles/Genome_CircularGenome_CircularGenome.o: ./Genome/CircularGenome/CircularGenome.cpp ./Genome/CircularGenome/CircularGenome.h
+	c++ -Wno-c++98-compat -w -Wall -std=c++14 -O3 -lpthread -pthread -c ./Genome/CircularGenome/CircularGenome.cpp -o objectFiles/Genome_CircularGenome_CircularGenome.o
 
 objectFiles/Optimizer_EcoEAOptimizer_EcoEAOptimizer.o: ./Optimizer/EcoEAOptimizer/EcoEAOptimizer.cpp ./Optimizer/EcoEAOptimizer/EcoEAOptimizer.h
 	c++ -Wno-c++98-compat -w -Wall -std=c++14 -O3 -lpthread -pthread -c ./Optimizer/EcoEAOptimizer/EcoEAOptimizer.cpp -o objectFiles/Optimizer_EcoEAOptimizer_EcoEAOptimizer.o
 
+objectFiles/Optimizer_LexicaseOptimizer_LexicaseOptimizer.o: ./Optimizer/LexicaseOptimizer/LexicaseOptimizer.cpp ./Optimizer/LexicaseOptimizer/LexicaseOptimizer.h
+	c++ -Wno-c++98-compat -w -Wall -std=c++14 -O3 -lpthread -pthread -c ./Optimizer/LexicaseOptimizer/LexicaseOptimizer.cpp -o objectFiles/Optimizer_LexicaseOptimizer_LexicaseOptimizer.o
+
 objectFiles/Brain_ANNBrain_ANNBrain.o: ./Brain/ANNBrain/ANNBrain.cpp ./Brain/ANNBrain/ANNBrain.h
 	c++ -Wno-c++98-compat -w -Wall -std=c++14 -O3 -lpthread -pthread -c ./Brain/ANNBrain/ANNBrain.cpp -o objectFiles/Brain_ANNBrain_ANNBrain.o
-
-objectFiles/Genome_CircularGenome_CircularGenome.o: ./Genome/CircularGenome/CircularGenome.cpp ./Genome/CircularGenome/CircularGenome.h
-	c++ -Wno-c++98-compat -w -Wall -std=c++14 -O3 -lpthread -pthread -c ./Genome/CircularGenome/CircularGenome.cpp -o objectFiles/Genome_CircularGenome_CircularGenome.o
 
 clean:
 	rm -r objectFiles/* mabe
