--- a/MABE/settings.cfg
+++ b/MABE/settings.cfg
@@ -1,5 +1,5 @@
 % GLOBAL
-  initPop = default 10                      #(string) initial population to start MABE (if it's .plf syntax it will be parsed as if preceded by "MASTER = ". If
+  initPop = default 100                      #(string) initial population to start MABE (if it's .plf syntax it will be parsed as if preceded by "MASTER = ". If
                                              #  it's a file name with .plf that population loader file is parsed
   mode = run                                 #(string) mode to run MABE in [run,visualize,analyze]
   outputPrefix = ./                          #(string) Directory and prefix specifying where data files will be written
@@ -25,7 +25,7 @@
   writeSnapshotOrganismsFiles = 0            #(bool) if true, snapshot organisms files will be written (with all organisms for entire population)
 
 % OPTIMIZER
-  optimizer = EcoEA                          #(string) optimizer to be used, [EcoEA]
+  optimizer = EcoEA                          #(string) optimizer to be used, [EcoEA, Lexicase]
 
 % OPTIMIZER_ECOEA
   consumptionFraction = 1.0                  #(double) Percentage of resources an organism actually gets (1.0 for normal)
@@ -36,9 +36,27 @@
   maxCap = 1.0                               #(double) Maximum resource an organism can take from one resource pool per update
   nextPopSize = -1                           #(string) size of population after optimization(MTree). -1 indicates use current population size
   numberParents = 1                          #(int) number of parents used to produce offspring
-  optimizeValueNames = mostForward,avgForward,leastForward,aggressive,wideDefense,tallDefense #(string) Names of data map elements to be used for EcoEA selection
+  optimizeValueNames = winRate,mostForward,avgForward,leastForward,aggressive,wideDefense,tallDefense #(string) Names of data map elements to be used for EcoEA
+                                             #  selection
   outflow = 0.01                             #(double) Resource outflow rate per update (as a percentage)
   tournamentSize = 7                         #(int) Size of each tournament in EcoEA selection
+
+% OPTIMIZER_LEXICASE
+  epsilon = 0.1                              #(double) cutoff when conducting per formula selection.
+                                             #  e.g. 0.1 = organisms in the top 90% are kept. use 0.0 for classic Lexicase.
+  epsilonRelativeTo = rank                   #(string) determines how epsilon is calculated [rank,score]
+                                             #  if rank, epsilon will be relative to organism ranks
+                                             #    i.e. keep (best current keepers count * epsilon) organisms
+                                             #  if score epsilon will be relative to min and max score
+                                             #    i.e. keep orgs with score >= maxScore - ( (maxScore-minScore) * epsilon )
+  nextPopSize = -1                           #(string) size of population after optimization(MTree). -1 indicates use current population size
+  numberParents = 1                          #(int) number of parents used to produce offspring
+  optimizeFormulaNames = default             #(string) column names to associate with optimize formulas in data files.
+                                             #  'default' will auto generate names as optimizeValue_1, optimizeValue_2, ...
+  optimizeFormulas = DM_AVE[score]           #(string) values to optimize with lexicase selection (list of MTrees)
+                                             #  example for BerryWorld: [DM_AVE[food1],DM_AVE[food2],(0-DM_AVE[switches])]
+  poolSize = -1                              #(int) number of organisms used when selecting parent(s) in the lexicase algorithm, -1 indicates to use entire population
+  recordOptimizeValues = 1                   #(bool) record optimize values to data files using optimizeFormulaNames
 
 % PARAMETER_FILES
   commentIndent = 45                         #(int) minimum space before comments
