--- a/MABE/settings_world.cfg
+++ b/MABE/settings_world.cfg
@@ -3,10 +3,12 @@
   worldType = Backgammon                     #(string) world to be used, [Backgammon]
 
 % WORLD_BACKGAMMON
+  comparisonAgent = PUB_EVAL                 #(string) Determines which type of agent to compare against (RANDOM or PUB_EVAL)
   evaluationsPerGeneration = 1               #(int) Number of times to test each Genome per generation (useful with non-deterministic brains)
   mode = 0                                   #(int) 0 = bit outputs before adding, 1 = add outputs
-  numberOfMatches = 100                     #(int) number of matches between pairs of brains
+  numberOfMatches = 1000                     #(int) number of matches between pairs of brains
   numberOfOutputs = 10                       #(int) number of outputs in this world
+  numberOfPredictionMatches = 10             #(int) Number of matches for each brain to try and predict each agent
 
 % WORLD_BACKGAMMON_NAMES
   brainNameSpace = root::                    #(string) namespace for parameters used to define brain
